--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <main>
     <section id="ss2">
         <div class="bb">
-            <img src="/person.png" alt="">
+            <img src="./person.png" alt="">
             <div class="bb1">
                 <h2 class="b1">My failures of previous year</h2>
                 <p class="b2">Contrary to popular belief, lorem lpsum in not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
@@ -41,22 +41,22 @@
 
             <div class="cc">
                 <div class="c1">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="./images/icons/web.png" alt="">
                     <h2>Web Development</h2>
                     <p>I want to start</p>
                 </div>
                 <div class="c1">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h2>Javascript</h2>
                     <p>I want to learn</p>
                 </div>
                 <div class="c1">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="./images/icons/smoke.png" alt="">
                     <h2>Smoking Habit</h2>
                     <p>I want to end</p>
                 </div>
                 <div class="c1">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="./images/icons/ecom.png" alt="">
                     <h2>ecommerce</h2>
                     <p>I want to develop</p>
                 </div>
@@ -80,9 +80,9 @@
             <p>Email: info@gmail.com</p>
             <p>Phone: 01500 00 00 00</p> 
             <div class="e2">
-                <img src="/images/icons/fb.png" alt="">
-                <img src="/images/icons/twitter.png" alt="">
-                <img src="/images/icons/youtube.png" alt="">
+                <img src="./images/icons/fb.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/youtube.png" alt="">
             </div>
          </div>
         <div class="e3">
